--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 <body>
 
     <h1 id="title">Paleta de Cores</h1>
-
     
+    <section id="color-palette">
+        <div class="color"></div>
+        <div class="color"></div>
+        <div class="color"></div>
+        <div class="color"></div>
+    </section>
+
     <script src='script.js'></script>
 </body>
 </html>
