--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <div class="color"></div>
     </section>
 
+    <button id="button-random-color">Cores aleatórias</button>
+
     <section id="quadro-negro">
         <div class="square"></div>
         <div class="square"></div>
