--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
     <h1 id="title">Paleta de Cores</h1>
     
     <section id="color-palette">
-        <div class="selected" class="color"></div>
+        <div class="color selected"></div>
         <div class="color"></div>
         <div class="color"></div>
         <div class="color"></div>
     </section>
-
-    <button id="button-random-color">Cores aleatórias</button>
+    
+    <section>
+        <button id="button-random-color">Cores aleatórias</button>
+    </section>
 
     <section id="pixel-board">
         <div class="pixel"></div>
