--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
         <div class="color"></div>
         <div class="color"></div>
     </section>
-    
-    <section>
-        <button id="button-random-color">Cores aleatórias</button>
+
+    <section id="buttons">
+        <div><button id="button-random-color">Cores aleatórias</button></div>
+        <div><button id="clear-board">Limpar</button></div>
     </section>
 
     <section id="pixel-board">
