requisitos bonus finalizados

--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
         <div class="color"></div>
     </section>
 
-    <section id="buttons">
+    <section class="buttons">
         <div><button id="button-random-color">Cores aleatórias</button></div>
         <div><button id="clear-board">Limpar</button></div>
+    </section>
+
+    <section class="buttons">
+        <div><input id="board-size" type="number" min="5" max="50" placeholder="Insira um tamanho de 5 a 50 e click VQV"><label id="input-number">Insira um novo tamanho</label></div>
+        <div><button id="generate-board">VQV</button></div>
     </section>
 
     <section id="pixel-board">
