modificando um pequeno detalhe de espaçamento no script e uma exigência do requisito bônus, e pronto, finalizadíssimo!

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </section>
 
     <section class="buttons">
-        <div><input id="board-size" type="number" min="5" max="50" placeholder="Insira um tamanho de 5 a 50 e click VQV"><label id="input-number">Insira um novo tamanho</label></div>
+        <div><input id="board-size" type="number" min="1" placeholder="Insira um tamanho de 5 a 50 e click VQV"><label id="input-number">Insira um novo tamanho</label></div>
         <div><button id="generate-board">VQV</button></div>
     </section>
 
